@@ -1423,122 +1423,6 @@ Display the result in a posframe." t)
              (consp project-switch-commands))
     (add-to-list 'project-switch-commands '(project-compile "Compile") t)))
 
-;;; bufferlo
-
-;;;; mode line
-
-(setq bufferlo-mode-line-prefix "🐃")
-(setq bufferlo-mode-line-set-active-prefix "Ⓢ")
-(setq bufferlo-mode-line-frame-prefix "Ⓕ")
-(setq bufferlo-mode-line-tab-prefix "Ⓣ")
-(setq bufferlo-mode-line-left-prefix nil) ; default "[" similar to flymake
-(setq bufferlo-mode-line-right-suffix nil) ; default "]"
-
-;;;; save-place-mode
-(setq bufferlo-bookmark-inhibit-bookmark-point t)
-
-;;;; consult integration
-
-(defvar +bufferlo-consult--source-local-buffers
-  (list :name "Bufferlo Local Buffers"
-        :narrow   ?l
-        :category 'buffer
-        :face     'consult-buffer
-        :history  'buffer-name-history
-        :state    #'consult--buffer-state
-        :default  t
-        :items    (lambda () (consult--buffer-query
-                         :predicate #'bufferlo-local-buffer-p
-                         :sort 'visibility
-                         :as #'buffer-name)))
-  "Local Bufferlo buffer candidate source for `consult-buffer'.")
-
-(defvar +bufferlo-consult--source-other-buffers
-  (list :name "Bufferlo Other Buffers"
-        :narrow   ?o
-        :category 'buffer
-        :face     'consult-buffer
-        :history  'buffer-name-history
-        :state    #'consult--buffer-state
-        :items    (lambda () (consult--buffer-query
-                         :predicate #'bufferlo-non-local-buffer-p
-                         :sort 'visibility
-                         :as #'buffer-name)))
-  "Non-local Bufferlo buffer candidate source for `consult-buffer'.")
-
-(defvar +bufferlo-consult--source-all-buffers
-  (list :name "Bufferlo All Buffers"
-        :narrow   ?a
-        :hidden   t
-        :category 'buffer
-        :face     'consult-buffer
-        :history  'buffer-name-history
-        :state    #'consult--buffer-state
-        :items    (lambda () (consult--buffer-query
-                         :sort 'visibility
-                         :as #'buffer-name)))
-  "All Bufferlo buffer candidate source for `consult-buffer'.")
-
-(after-load! consult
-  (require 'bufferlo)
-  ;; add in the reverse order of display preference
-  (add-to-list 'consult-buffer-sources '+bufferlo-consult--source-all-buffers)
-  (add-to-list 'consult-buffer-sources '+bufferlo-consult--source-other-buffers)
-  (add-to-list 'consult-buffer-sources '+bufferlo-consult--source-local-buffers)
-  (consult-customize consult--source-buffer :hidden t))
-
-(defvar-keymap +bufferlo-prefix-map
-  :prefix '+bufferlo-prefix-map
-  ;; buffer / ibuffer
-  "C-b"   #'bufferlo-ibuffer
-  "C-M-b" #'bufferlo-ibuffer-orphans
-  "b -"   #'bufferlo-remove
-  ;; general bookmark interactive
-  "b l"  #'bufferlo-bms-load
-  "b s"  #'bufferlo-bms-save
-  "b c"  #'bufferlo-bms-close
-  "b r"  #'bufferlo-bm-raise
-  ;; dwim frame or tab bookmarks
-  "d s"  #'bufferlo-bm-save
-  "d l"  #'bufferlo-bm-load
-  "d 0"  #'bufferlo-bm-close
-  ;; tabs
-  "t s"  #'bufferlo-bm-tab-save               ; save
-  "t u"  #'bufferlo-bm-tab-save-curr          ; update
-  "t l"  #'bufferlo-bm-tab-load               ; load
-  "t r"  #'bufferlo-bm-tab-load-curr          ; reload
-  "t 0"  #'bufferlo-bm-tab-close-curr         ; kill
-  ;; frames
-  "f s"  #'bufferlo-bm-frame-save             ; save
-  "f u"  #'bufferlo-bm-frame-save-curr        ; update
-  "f l"  #'bufferlo-bm-frame-load             ; load
-  "f r"  #'bufferlo-bm-frame-load-curr        ; reload
-  "f m"  #'bufferlo-bm-frame-load-merge       ; merge
-  "f 0"  #'bufferlo-bm-frame-close-curr       ; kill
-  ;; sets
-  "s s"  #'bufferlo-set-save                  ; save
-  "s u"  #'bufferlo-set-save-curr             ; update
-  "s l"  #'bufferlo-set-load                  ; load
-  "s 0"  #'bufferlo-set-close                 ; kill
-  "s c"  #'bufferlo-set-clear                 ; clear
-  "s L"  #'bufferlo-set-list                  ; list contents of selected active sets
-  )
-
-(defun +autoload-recursively (def file)
-  (cond ((and (symbolp def) (not (symbol-function def)))
-         (autoload def file nil t))
-        ((and (symbolp def) (autoloadp (symbol-function def)))
-         nil)
-        ((keymapp def)
-         (map-keymap (lambda (_event cmd) (+autoload-recursively cmd file)) def))))
-
-(+autoload-recursively +bufferlo-prefix-map "bufferlo")
-(keymap-global-set "C-c z" '+bufferlo-prefix-map)
-
-(after-load! bufferlo
-  (bufferlo-mode)
-  (bufferlo-anywhere-mode))
-
 ;;;; buffer-env
 
 (add-hook 'hook-local-variables-hook #'buffer-env-update)
